--- a/web/src/main/resources/templates/student/marketplace.html
+++ b/web/src/main/resources/templates/student/marketplace.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head"></head>
 <link th:href="@{~/css/portal-styles.css}" rel="stylesheet" />
+<link th:href="@{~/css/forum.css}" rel="stylesheet" />
+<script type="text/javascript" th:src="@{~/js/multiselect-dropdown.js}"></script>
 <body onload="hidePositionsPendingTableIfEmpty()">
 <!-- Top Navigation Bar -->
 <div th:replace="fragments/navigation :: top-navigation"></div>
@@ -22,7 +24,12 @@
 
                 <h1 class="text-center m-3">Jobs & Placements</h1>
 
-                <div th:replace="fragments/marketplace-tables :: approvedStudent"></div>
+                <!-- Switch fragment depending on the position type -->
+                <div id="fragment-container" th:switch="${#strings.toLowerCase(type)}">
+                    <div th:case="null" th:insert="fragments/marketplace-tables :: approvedStudent"></div>
+                    <div th:case="job" th:insert="fragments/position-details :: job-view"></div>
+                    <div th:case="placement" th:insert="fragments/position-details :: placement-view"></div>
+                </div>
 
             </div>
         </div>
