--- a/web/src/main/resources/templates/fragments/position-details.html
+++ b/web/src/main/resources/templates/fragments/position-details.html
@@ -4,7 +4,7 @@
     <div class="form-group row py-3">
         <label for="jobId" class="col-lg-1 col-form-label pr-0 text-end">Job ID</label>
         <div class="col-lg-11">
-            <input type="text" readonly class="form-control-plaintext" id="jobId" th:value="${job.id}">
+            <input type="text" readonly class="form-control-plaintext" id="jobId" th:value="${position.id}">
         </div>
 
     </div>
@@ -13,55 +13,55 @@
         <label for="jobStartDate" class="col-lg-1 col-form-label pr-0 text-end">Start Date</label>
         <div class="col-lg-3">
             <input type="text" class="form-control" id="jobStartDate"
-                   th:value="${#dates.format(job.startDate, 'dd/MM/yyyy')}">
+                   th:value="${#dates.format(position.startDate, 'dd/MM/yyyy')}">
         </div>
 
         <label for="jobEndDate" class="col-lg-1 col-form-label pr-0 text-end">End Date</label>
         <div class="col-lg-3">
             <input type="text" class="form-control" id="jobEndDate"
-                   th:value="${#dates.format(job.endDate, 'dd/MM/yyyy')}">
+                   th:value="${#dates.format(position.endDate, 'dd/MM/yyyy')}">
         </div>
 
         <label for="jobPeriod" class="col-lg-1 col-form-label pr-0 text-end">Period</label>
         <div class="col-lg-3">
             <input type="text" class="form-control" id="jobPeriod"
-                   th:value="|Days = ${job.period.days}, Months = ${job.period.months}, Years = ${job.period.years}|">
+                   th:value="|Days = ${position.period.days}, Months = ${position.period.months}, Years = ${position.period.years}|">
         </div>
     </div>
 
     <div class="form-group row py-3">
         <label for="jobDescription" class="col-lg-1 col-form-label pr-0 text-end">Description</label>
         <div class="col-lg-11">
-            <textarea rows="5" class="form-control" id="jobDescription" th:value="${job.description}"></textarea>
+            <textarea rows="5" class="form-control" id="jobDescription" th:value="${position.description}" th:text="${position.description}"></textarea>
         </div>
     </div>
 
     <div class="form-group row py-3">
         <label for="jobPayRate" class="col-lg-1 col-form-label pr-0 text-end">Pay Rate</label>
         <div class="col-lg-1">
-            <input type="text" class="form-control" id="jobPayRate" th:value="${job.payRate}">
+            <input type="text" class="form-control" id="jobPayRate" th:value="${#numbers.formatCurrency(position.payRate)}">
         </div>
 
         <label for="jobPayType" class="col-lg-2 col-form-label pr-0 text-end">Pay Type</label>
         <div class="col-lg-3">
-            <input type="text" class="form-control" id="jobPayType" th:value="${job.payType}">
+            <input type="text" class="form-control" id="jobPayType" th:value="${position.payType}">
         </div>
 
         <label for="jobPayFrequency" class="col-lg-2 col-form-label pr-0 text-end">Pay Frequency</label>
         <div class="col-lg-3">
-            <input type="text" class="form-control" id="jobPayFrequency" th:value="${job.payFrequency}">
+            <input type="text" class="form-control" id="jobPayFrequency" th:value="${position.payFrequency}">
         </div>
     </div>
 
     <div class="form-group row py-3">
         <label for="partnerBusinessName" class="col-lg-1 col-form-label pr-0 text-end">Partner</label>
         <div class="col-lg-4">
-            <input type="text" class="form-control" id="partnerBusinessName" th:value="${job.partner.businessName}">
+            <input type="text" class="form-control" id="partnerBusinessName" th:value="${position.partner.businessName}">
         </div>
 
         <label for="partnerEmail" class="col-lg-2 col-form-label pr-0 text-end">Partner Email</label>
         <div class="col-lg-5">
-            <input type="text" class="form-control" id="partnerEmail" th:value="${job.partner.email}">
+            <input type="text" class="form-control" id="partnerEmail" th:value="${position.partner.email}">
         </div>
     </div>
 
@@ -76,7 +76,7 @@
                 <option value="1" >Resume #1</option>
                 <option value="2">Resume #2</option>
                 <option value="3">Cover letter #1</option>
-            </select><span class="placeholder">What the shit</span>
+            </select>
         </div>
         <div class="col-lg-3"></div>
         <div class="row col-lg-12 text-center">
@@ -93,7 +93,7 @@
 <!-- ================ Placement View ================ -->
 <div th:fragment="placement-view" id="placement-view" xmlns:th="http://www.thymeleaf.org">
 
-    <!-- Just a demo to show we can access the placement object passed from the controller -->
-    <h1 th:text="|Placement #${placement.id}|">Placement</h1>
+    <!-- Placement form to go here -->
+    <h1 th:text="|Placement #${position.id}|">Placement</h1>
 
 </div>
