--- a/web/src/main/resources/templates/partner/new-position.html
+++ b/web/src/main/resources/templates/partner/new-position.html
@@ -21,29 +21,15 @@
                 </ol>
             </nav>
 
-            <h1 class="text-center m-3">New Position</h1>
-            <label for="positionTypes" class="form-label mb-3 center">Select the position type:</label>
-            <select class="form-select" id="positionTypes" onchange="showFragment(this.value)">
-                <option th:each="opt : ${positionOptions}"
-                        th:text="${opt}"
-                        th:value="${opt}">
-                </option>
-            </select>
+            <h1 class="text-center m-3" th:text="'New ' + ${type}">Title</h1>
 
-            <!-- New position forms -->
-            <div th:replace="fragments/position-forms  :: new-job-form"></div>
-            <div th:replace="fragments/position-forms  :: new-placement-form"></div>
+            <div id="new-position-forms" th:switch="${#strings.toLowerCase(type)}">
+                <div th:case="job" th:insert="fragments/position-forms  :: new-job-form"></div>
+                <div th:case="placement" th:insert="fragments/position-forms  :: new-placement-form"></div>
+            </div>
+
         </div>
     </div>
 </div>
 </body>
-<script>
-
-    //Show only the type passed, hide all else
-    function showFragment(positionType) {
-        document.getElementById("new-job-form").hidden = (positionType != "Job")
-        document.getElementById("new-placement-form").hidden = (positionType != "Placement")
-    }
-
-</script>
 </html>
