--- a/web/src/main/resources/templates/fragments/marketplace-tables.html
+++ b/web/src/main/resources/templates/fragments/marketplace-tables.html
@@ -176,15 +176,15 @@
 
 </div>
 
-<!-- Partner Jobs & Placements -->
-<div th:fragment="partner" id="partner" xmlns:th="http://www.thymeleaf.org">
+<!-- Partner Jobs -->
+<div th:fragment="partner-jobs" id="partner-jobs" xmlns:th="http://www.thymeleaf.org">
 
     <div class="row">
         <div class="col-12 col-md-4 col-lg-4 col-xl-3">
-            <h1 class="table-heading">Your Jobs & Placements</h1>
+            <h1 class="table-heading">Your Jobs</h1>
         </div>
         <div class="col-12 col-md-7 col-lg-8 col-xl-6">
-            <input class="form-control" id="partnerFilter" type="text" name="keyword" placeholder="Filter Positions..." /></div>
+            <input class="form-control" id="partnerJobFilter" type="text" name="keyword" placeholder="Filter Positions..." /></div>
         <div class="col-md-1 col-xl-3"></div>
     </div>
 
@@ -193,7 +193,6 @@
             <thead>
             <tr>
                 <th>ID</th>
-                <th>Type</th>
                 <th>Start Date</th>
                 <th>End Date</th>
                 <th>Description</th>
@@ -201,18 +200,18 @@
                 <th class="text-center">Manage</th>
             </tr>
             </thead>
-            <tbody id="partnerPositionsData">
-            <tr th:each="pos : ${partnerPositions}">
-                <th scope="row" th:text="${pos.id}"></th>
-                <td th:text="${pos.type}">Job</td>
-                <td th:text="${#dates.format(pos.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
-                <td th:text="${#dates.format(pos.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
-                <td th:text="${pos.description}">Just a one month job</td>
-                <td th:text="${pos.approved ? 'Approved' : 'Pending'}">Approved</td>
+            <tbody id="partnerJobsData">
+            <tr th:each="job : ${partnerJobs}">
+                <th scope="row" th:text="${job.id}"></th>
+                <td th:text="${#dates.format(job.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
+                <td th:text="${#dates.format(job.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
+                <td th:text="${job.description}">Just a one month job</td>
+                <td th:text="${job.approved ? 'Approved' : 'Pending'}">Approved</td>
                 <td style="display: flex;">
                     <div class="mx-auto">
                         <!-- link passes position type as a request param to dynamically load the edit page -->
-                        <a th:href="@{'/partner/edit-position?type=' + ${pos.type}}" class="material-symbols-rounded btn-edit" title="Edit">edit</a>
+                        <!-- NB will need to pass id as well -->
+                        <a th:href="@{'/partner/edit-position?type=job'}" class="material-symbols-rounded btn-edit" title="Edit">edit</a>
                         <span class="material-symbols-rounded btn-delete">delete</span>
                     </div>
                 </td>
@@ -223,20 +222,77 @@
         <script th:inline="javascript">
             /*<![CDATA[*/
             var positions =
-                /*[[${partnerPositions}]]*/
+                /*[[${partnerJobs}]]*/
                 /*]]>*/
-                $("#partnerFilter").on("keyup", function () {
+                $("#partnerJobFilter").on("keyup", function () {
                     var value = $(this).val();
-                    var table = document.getElementById("partnerPositionsData");
-                    var filteredData = partnerFilterPositions(value, positions);
-                    rebuildPartnerPositionsTable(filteredData, table);
+                    var table = document.getElementById("partnerJobsData");
+                    var filteredData = partnerFilterJobs(value, positions);
+                    rebuildPartnerJobsTable(filteredData, table);
                 });
         </script>
     </div>
-
 </div>
 
-<!-- Partner Jobs & Placements -->
+<!-- Partner Placements -->
+<div th:fragment="partner-placements" id="partner-placements" xmlns:th="http://www.thymeleaf.org">
+
+    <div class="row">
+        <div class="col-12 col-md-4 col-lg-4 col-xl-3">
+            <h1 class="table-heading">Your Placements</h1>
+        </div>
+        <div class="col-12 col-md-7 col-lg-8 col-xl-6">
+            <input class="form-control" id="partnerPlacementsFilter" type="text" name="keyword" placeholder="Filter Positions..." /></div>
+        <div class="col-md-1 col-xl-3"></div>
+    </div>
+
+    <div class="row table-container">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Start Date</th>
+                <th>End Date</th>
+                <th>Description</th>
+                <th>Status</th>
+                <th class="text-center">Manage</th>
+            </tr>
+            </thead>
+            <tbody id="partnerPlacementsData">
+            <tr th:each="pla : ${partnerPlacements}">
+                <th scope="row" th:text="${pla.id}"></th>
+                <td th:text="${#dates.format(pla.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
+                <td th:text="${#dates.format(pla.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
+                <td th:text="${pla.description}">Just a one month job</td>
+                <td th:text="${pla.approved ? 'Approved' : 'Pending'}">Approved</td>
+                <td style="display: flex;">
+                    <div class="mx-auto">
+                        <!-- link passes position type as a request param to dynamically load the edit page -->
+                        <!-- NB will need to pass id as well -->
+                        <a th:href="@{'/partner/edit-position?type=placement'}" class="material-symbols-rounded btn-edit" title="Edit">edit</a>
+                        <span class="material-symbols-rounded btn-delete">delete</span>
+                    </div>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <script th:inline="javascript">
+            /*<![CDATA[*/
+            var positions =
+                /*[[${partnerPlacements}]]*/
+                /*]]>*/
+                $("#partnerPlacementsFilter").on("keyup", function () {
+                    var value = $(this).val();
+                    var table = document.getElementById("partnerPlacementsData");
+                    var filteredData = partnerFilterPlacements(value, positions);
+                    rebuildPartnerPlacementsTable(filteredData, table);
+                });
+        </script>
+    </div>
+</div>
+
+<!-- Partner EOIs -->
 <div th:fragment="partner-expression-of-interest" id="partner-expression-of-interest" xmlns:th="http://www.thymeleaf.org">
 
     <div class="row">
